client/src/index.css
body {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}
.profile-bg {
  background: url("https://images.pexels.com/photos/257360/pexels-photo-257360.jpeg?auto=compress&cs=tinysrgb&h=350")
}

footer { 
  margin-top: 260px;
}

